--- a/app/templates/pages/graph_page.html
+++ b/app/templates/pages/graph_page.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 
+<div id="helper">
+  <div id="helper-talk">
+  </div>
+  <div id="user-talk-input">
+  </div>
+  <img src="/static/images/bear.png" onClick="helper_talk({})" />
+</div>
+
 <div id="infobox-right">
   <input type="submit" value="Save" onClick="save()"><br/>
   Save under name:<br />
